# code-cognitio

./: .coverage.Mac.communityfibre.co.uk.74788.XWIWvgqx  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  run_mcp_server.py  setup.cfg  setup.py
docs/: sample_doc.md  vscode_extension.md
examples/: DUMMY.md  demo.py  dummy.py  large_test_file.py  test_sample.py
examples/multi_lang/: README.md  test.js  test.jsx  test.py  test.ts
examples/sample_code/: example.py
src/: __init__.py  main.py
src/core/: __init__.py  cli.py  file_processor.py  operations.py  search_service.py
src/extractors/: __init__.py  base_extractor.py  code_extractor.py  doc_extractor.py  dockerfile_extractor.py  javascript_extractor.py  markdown_extractor.py  python_extractor.py  rst_extractor.py
src/processors/: __init__.py  chunker.py  text_processor.py
src/search/: __init__.py  faiss_search.py  search_engine.py
tests/: README.md  __init__.py  conftest.py  test_integration.py
tests/extractors/: test_code_extractor.py  test_doc_extractor.py  test_javascript_extractor.py  test_markdown_extractor.py  test_python_extractor.py  test_rst_extractor.py
tests/processors/: test_chunker.py  test_text_processor.py
tests/search/: test_faiss_search.py  test_search_engine.py
