[project]
name = "code-cognitio"
version = "0.1.0"
description = "A semantic search system for code repositories."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu>=1.10.0",
    "mcp[cli]>=1.5.0",
    "nltk>=3.9.1",
    "sentence-transformers>=3.4.1",
    "spacy>=3.8.4",
]
